fslib Changes
===============

WIP
----
* Add `fs::Mesh::construct_grid` function to construct 2D grids.
* Add `fs::Mesh::construct_pyramid` function.


v0.3.0: Fully documented
-------------------------
* Finish API documentation: all members and functions documented, many with example usage in the doc string.
* Add support for writing FreeSurfer brain meshes in surf format, see function `fs::write_surf`.
* Add support for constructing basic meshes, see `fs::Mesh::construct_cube`. Mainly for examples.
* Add general wrapper function for writing meshes in different formats, auto-detected from file extension, see `fs::write_mesh`.
* BREAKING: Remove duplicate `fs::fullpath` function. Use `fs::util::fullpath` instead.


v0.2.2: Exceptions for the world
---------------------------------
* Add `fs::read_subjectsfile` function.
* Throw exceptions in all places where `exit` was still being called. Document potentially thrown exceptions in function doc strings.
* Fix mesh indexing bug.


v0.2.1: Annot support and much better docs
-------------------------------------------
* Finish rough first version of API documentation.
* Add structs `Annot` and `Colortable` with many convenience member functions that model brain parcellations.
* Add support for reading brain surface parcellations from annot files, see `fs::read_annot` function.
* Add example for reading annot files.


 v0.2.0 Streaming and MGZ support
----------------------------------
* BREAKING: change order of arguments for all functions reading streams.
* BREAKING: rename all `sread_` functions to `read_` and use overloading.
* Add stream-based versions for reading various formats, including MGH. This allows for MGZ support, see `examples/read_mgz/`.
* Add many new member functions to structs and use them throughout the library.
* Add Curv struct and new `fs::read_curv` function that reads into it.
* BREAKING: rename old `fs::read_curv` function that reads only the data part to `fs::read_curv_data`.

